--- a/snuev-ios/Login/Login.storyboard
+++ b/snuev-ios/Login/Login.storyboard
@@ -440,7 +440,10 @@
                                         <rect key="frame" x="20" y="45" width="335" height="55"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4IA-le-8YR">
-                                                <rect key="frame" x="40" y="21.5" width="8" height="17"/>
+                                                <rect key="frame" x="40" y="15" width="265" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="bNn-gs-Bbs"/>
+                                                </constraints>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -451,6 +454,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4IA-le-8YR" secondAttribute="trailing" constant="30" id="3XT-YD-3Ar"/>
                                             <constraint firstItem="4IA-le-8YR" firstAttribute="leading" secondItem="1NC-N1-Rz2" secondAttribute="trailing" constant="10" id="AT2-Bd-ICN"/>
                                             <constraint firstItem="1NC-N1-Rz2" firstAttribute="leading" secondItem="W4Y-OL-82w" secondAttribute="leading" id="Hbm-hp-jt4"/>
                                             <constraint firstItem="4IA-le-8YR" firstAttribute="centerY" secondItem="1NC-N1-Rz2" secondAttribute="centerY" id="f74-VG-R2V"/>
@@ -469,12 +473,11 @@
                                     <constraint firstItem="W4Y-OL-82w" firstAttribute="leading" secondItem="gDe-ih-Hqe" secondAttribute="leading" constant="20" id="j8T-JW-FOr"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eml-cH-L1E">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eml-cH-L1E">
                                 <rect key="frame" x="0.0" y="128" width="375" height="539"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="vEy-cr-7BM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="vEy-cr-7BM">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vEy-cr-7BM" id="LyS-ZQ-SvO">
@@ -488,8 +491,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="gDe-ih-Hqe" firstAttribute="leading" secondItem="aJN-Xa-2ap" secondAttribute="leading" id="S59-Sa-nmp"/>
+                            <constraint firstItem="eml-cH-L1E" firstAttribute="trailing" secondItem="aJN-Xa-2ap" secondAttribute="trailing" id="Zva-vB-38n"/>
+                            <constraint firstItem="eml-cH-L1E" firstAttribute="leading" secondItem="aJN-Xa-2ap" secondAttribute="leading" id="gKk-ri-hjk"/>
                             <constraint firstItem="gDe-ih-Hqe" firstAttribute="top" secondItem="aJN-Xa-2ap" secondAttribute="top" id="kPb-wd-b6S"/>
+                            <constraint firstItem="eml-cH-L1E" firstAttribute="top" secondItem="gDe-ih-Hqe" secondAttribute="bottom" constant="8" id="mlW-mq-y4E"/>
                             <constraint firstItem="aJN-Xa-2ap" firstAttribute="trailing" secondItem="gDe-ih-Hqe" secondAttribute="trailing" id="oi6-cq-4Rs"/>
+                            <constraint firstItem="eml-cH-L1E" firstAttribute="bottom" secondItem="aJN-Xa-2ap" secondAttribute="bottom" id="wPV-oH-cYu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aJN-Xa-2ap"/>
                     </view>
